api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels: 
    type: api
spec:
  template:
    metadata: 
      name: api-pod
      labels:
        type: api
    spec:
      containers:
        - name: api-container
          image: sumanthmysore/a2-api-go
  replicas: 4
  selector:
    matchLabels:
      type: api
