fe-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  labels: 
    type: fe
spec:
  template:
    metadata: 
      name: fe-pod
      labels:
        type: fe
    spec:
      containers:
        - name: fe-container
          image: sumanthmysore/a2-frontend
          imagePullPolicy: Always
  replicas: 4
  selector:
    matchLabels:
      type: fe
