db-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    type: db
    tier: database
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    type: db
    tier: database
---
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: mongo
# spec:
#   selector:
#     matchLabels:      
#       role: db
#       env: demo
#       replicaset: rs0.main
#   serviceName: mongo
#   replicas: 3
#   template:
#     metadata:
#       labels:
#         role: db
#         env: demo
#         replicaset: rs0.main
#     spec:
#       # affinity:
#       #   podAntiAffinity:
#       #     preferredDuringSchedulingIgnoredDuringExecution:
#       #     - weight: 100
#       #       podAffinityTerm:
#       #         labelSelector:
#       #           matchExpressions:
#       #           - key: replicaset
#       #             operator: In
#       #             values:
#       #             - rs0.main
#       #         topologyKey: kubernetes.io/hostname
#       # terminationGracePeriodSeconds: 10
#       containers:
#         - name: mongo
#           image: sumanthmysore/a2-db
#           # command:
#           #   - "numactl"
#           #   - "--interleave=all"
#           #   - "mongod"
#           #   - "--wiredTigerCacheSizeGB"
#           #   - "0.26"
#           #   - "--bind_ip"
#           #   - "0.0.0.0"
#           #   - "--replSet"
#           #   - "rs0"
#           ports:
#             - containerPort: 27017
#           volumeMounts:
#             - name: mongodb-persistent-storage-claim
#               mountPath: /data/db
#   volumeClaimTemplates:
#   - metadata:
#       name: mongodb-persistent-storage-claim
#       # namespace: cloudacademy
#       annotations:
#         volume.beta.kubernetes.io/storage-class: "standard"
#     spec:
#       accessModes: [ "ReadWriteOnce" ]
#       resources:
#         requests:
#           storage: 1Gi


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  # namespace: cloudacademy
  labels:
    tier: database-statefulset
spec:
  replicas: 3
  selector:
    matchLabels:
      type: db
      tier: database
  serviceName: mongo
  template:
    metadata:
      name: mongodb
      # namespace: cloudacademy
      labels:
        type: db
        tier: database
    spec:
      containers:
        - name: mongodb
          image: sumanthmysore/a2-mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-persistent-storage-claim
  volumeClaimTemplates:
    - metadata:
        name: mongodb-persistent-storage-claim
        # namespace: cloudacademy
        annotations:
          volume.beta.kubernetes.io/storage-class: "standard"
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
