fe-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: fe-service
  labels:
    type: fe
spec:
  # type: ClusterIP
  type: NodePort
  ports:
    - nodePort: 30004
      port: 3000
      targetPort: 3000
  selector:
    type: fe
