ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: 18.223.100.61
      http: 
        paths:
          - backend:
              service:
                name: fe-service
                port:
                  number: 80
            pathType: Prefix
            path: /frontend
            
          - backend:
              service:
                name: api-service
                port:
                  number: 8080
            pathType: Prefix
            path: /backend
          
    # - host: backend.com
    #   http: 
    #     paths:
    #       - backend:
    #           service:
    #             name: api-service
    #             port:
    #               number: 8080
    #         pathType: Prefix
    #         path: /
